--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-left">
-                <h1>The Smartest 
+                <h1>The Smartest <br>
                     Teddy Bear in the world </h1>
                     <p>Nice plush toy from the outside, and smartest modern technology gadget from the inside</p>
                     <a href="">BUY NOW with FREE FAST delivery</a>
@@ -46,6 +46,34 @@
                 <img src="img/image 420.png" alt="Картинка телефона в секции hero">
 
             </div>
+        </div>
+    </section>
+    <section class="tutorial">
+        <div class="container">
+            <div class="title">
+                <h2>How it works? <span>Just like a magic</span></h2>
+                <p>Smart Teddy has more than 50 features - it distract kids from screens with stories and games. And children actually listen to Teddy! 
+                </p>
+            </div>
+            <div class="card">
+                <div class="card-left
+                ">
+                    <img src="img/Frame_3123393.png" alt="голубой фон">
+                    <img src="img/USA_IROD1169_big_for_dark_back_2.png" alt="мишка">
+                </div>
+                <h3 class="card-right
+                    ">Download our free mobile app to control the Smart Teddy</h3>
+            </div>
+            <div class="card card2">
+                <h3 class="card-right
+                    ">Download our free mobile app to control the Smart Teddy</h3>
+                <div class="card-left
+                ">
+                    <img src="img/Frame_3123393.png" alt="голубой фон">
+                    <img src="img/USA_IROD1169_big_for_dark_back_2.png" alt="мишка">
+                </div>
+                
+            </div>    
         </div>
     </section>
 </body>
