--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap" rel="stylesheet">
-    
+    <script src="https://kit.fontawesome.com/2f38ba5239.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -114,17 +114,107 @@
 
     <section class="money-back">
         <div class="container">
-            <div class="money-back-left">
-                <h3>Excited? Try it now!</h3>
-                <p>Если тебе не понравится, неважно по какой причине, мы вернем тебе деньги в течение 90 дней</p>
-                <a href="">TRy IT</a>
+            <div class="money-back-wrapper">
+                <div class="money-back-left">
+                    <h3>Excited? Try it now!</h3>
+                    <p>Если тебе не понравится, неважно по какой причине, мы вернем тебе деньги в течение 90 дней</p>
+                    <a href="">TRY IT</a>
+                </div>
+                <div class="money-back-right">
+                    <img src="img/png2_1.png" alt="bear">
+                    <img src="img/IROD1213_3.png" alt="girl">
+                </div>
+                <img src="img/Frame.png" alt="decor">
             </div>
-            <div class="money-back-right">
-                <img src="img/IROD1213_3.png" alt="girl">
-                <img src="img/png2_1.png" alt="bear">
-            </div>
-            <img src="img/Frame.png" alt="decor">
         </div>
     </section>
+
+    <section class="explanation">
+        <div class="container">
+            <div class="title">
+                <h2>Why this is <span>best gift for your family</span></h2>
+                <p>Вот тут текст</p>
+            </div>
+            <div class="cards">
+                <div class="card1">
+                    <h3>Create Daily Shedule</h3>
+                    <p>He will help to build healthy habits</p>
+                    <img src="img/Frame 3123379.png" alt="картинка с девочкой и мишкой">
+                </div>
+                <div class="card2">
+                    <h3>Toddler can use it all on their own</h3>
+                    <p>Expand vocabulary by listening to the poems and fun facts</p>
+                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                </div>
+                <div class="card3">
+                    <h3>Develop critical thinking</h3>
+                    <p>Play and learnat the same time. Isn’t it fun?</p>
+                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                </div>
+                <div class="card4">
+                    <h3>Distract from gadgets</h3>
+                    <p>Smart Teddy knows how to distract your kids from screens</p>
+                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                </div>
+                <div class="card5">
+                    <h3>Help with bedtime struggles</h3>
+                    <p>Enjoy bedtime <br> stories and lullabies</p>
+                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                </div>
+                <div class="card6">
+                    <h3>Give parents free time</h3>
+                    <p>Have your own time, while we keep your child busy</p>
+                    <img src="img/customer care.png" alt="Картинка с девушкой и мишкой">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-top">
+                <nav>
+                    <ul>
+                        <li>Quick links</li>
+                        <li><a href="">Smart Teddy</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">Payment & Shipping</a></li>
+                    </ul>
+                    <ul>
+                        <li>Info</li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">Agreement</a></li>
+                        <li><a href="">Warranty</a></li>
+                        <li><a href="">Do not sell my personal information</a></li>
+                    </ul>
+                </nav>
+                <div class="info">
+                    <h5>Smart Teddy</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, ipsa!</p>                
+                </div>
+                <a class="logo" href=""><img src="img/logo.png" alt="Логотип сайта"></a>
+            </div>
+
+            <form method="post">
+                <label for="email">Subscribe to our emails</label>
+                <input id="email" type="email" placeholder="Email">
+                <input type="image" src="https://api.iconify.design/material-symbols:arrow-right-alt.svg?color=%23ffffff">
+            </form>
+            
+            <div class="socials">
+                <a href="">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+                <a href="">
+                  <i class="fa-brands fa-google"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
