--- a/index.html
+++ b/index.html
@@ -134,74 +134,42 @@
                 <h2>Why this is <span>best gift for your family</span></h2>
                 <p>Вот тут текст</p>
             </div>
-            <!-- <div class="cards">
-                <div class="card1">
-                    <h3>Create Daily Shedule</h3>
-                    <p>He will help to build healthy habits</p>
-                    <img src="img/Frame 3123379.png" alt="картинка с девочкой и мишкой">
-                </div>
-                <div class="card2">
-                    <h3>Toddler can use it all on their own</h3>
-                    <p>Expand vocabulary by listening to the poems and fun facts</p>
-                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                </div>
-                <div class="card3">
-                    <h3>Develop critical thinking</h3>
-                    <p>Play and learnat the same time. Isn’t it fun?</p>
-                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                </div>
-                <div class="card4">
-                    <h3>Distract from gadgets</h3>
-                    <p>Smart Teddy knows how to distract your kids from screens</p>
-                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                </div>
-                <div class="card5">
-                    <h3>Help with bedtime struggles</h3>
-                    <p>Enjoy bedtime <br> stories and lullabies</p>
-                    <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                </div>
-                <div class="card6">
-                    <h3>Give parents free time</h3>
-                    <p>Have your own time, while we keep your child busy</p>
-                    <img src="img/customer care.png" alt="Картинка с девушкой и мишкой">
-                </div>
-            </div> -->
-            <table>
-                <tr>
-                    <td>
-                        <h3>Create <br>Daily Shedule</h3>
+            <div class="table">
+                <div class="row">
+                    <div class="card1">
+                        <h3>Create Daily Shedule</h3>
                         <p>He will help to build healthy habits</p>
                         <img src="img/Frame 3123379.png" alt="картинка с девочкой и мишкой">
-                    </td>
-                    <td>
-                        <h3>Toddler can use it <br>all on their own</h3>
-                        <p>Expand vocabulary by listening to <br>the poems and fun facts</p>
-                        <img src="img/Rectangle 1835.png" alt="пурпурный фон"> 
-                    </td>
-                    <td>
-                        <h3>Develop <br>critical thinking</h3>
-                        <p>Play and learnat the same time. <br>Isn’t it fun?</p>
-                        <img src="img/Rectangle 1835.png" alt="пурпурный фон"> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h3>Distract <br>from gadgets</h3>
-                        <p>Smart Teddy knows how to distract <br>your kids from screens</p>
+                    </div>
+                    <div class="card2">
+                        <h3>Toddler can use it all on their own</h3>
+                        <p>Expand vocabulary by listening to the poems and fun facts</p>
                         <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                    </td>
-                    <td>
-                        <h3>Help with <br>bedtime struggles</h3>
+                    </div>
+                    <div class="card3">
+                        <h3>Develop critical thinking</h3>
+                        <p>Play and learnat the same time. Isn’t it fun?</p>
+                        <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card4">
+                        <h3>Distract from gadgets</h3>
+                        <p>Smart Teddy knows how to distract your kids from screens</p>
+                        <img src="img/Rectangle 1835.png" alt="пурпурный фон">
+                    </div>
+                    <div class="card5">
+                        <h3>Help with bedtime struggles</h3>
                         <p>Enjoy bedtime <br> stories and lullabies</p>
                         <img src="img/Rectangle 1835.png" alt="пурпурный фон">
-                    </td>
-                    <td>
-                        <h3>Give parents <br>free time</h3>
-                        <p>Have your own time, while we keep <br>your child busy</p>
+                    </div>
+                    <div class="card6">
+                        <h3>Give parents free time</h3>
+                        <p>Have your own time, while we keep your child busy</p>
                         <img src="img/customer care.png" alt="Картинка с девушкой и мишкой">
-                    </td>
-                </tr>
-            </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
